--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,22 +6,24 @@ on: [push]
 jobs:
   test-lint:
     name: Test and Lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker
+        run: |
+          sudo systemctl start docker
+          sudo docker info
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Install Docker Compose
         run: |
@@ -29,7 +31,7 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: sudo docker-compose run --rm app sh -c "python manage.py test"
 
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: sudo docker-compose run --rm app sh -c "flake8"
