--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -36,7 +36,7 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Test
-        run: sudo docker-compose run --rm app sh -c "python manage.py test"
+        run: sudo docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
 
       - name: Lint
         run: sudo docker-compose run --rm app sh -c "flake8"
